added building spinner, other minor ui changes